--- a/AutoAlarm/src/main/res/layout/activity_main.xml
+++ b/AutoAlarm/src/main/res/layout/activity_main.xml
@@ -4,4 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+
+        <TextView
+            android:id="@+id/debug_text"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+        />
+
+</FrameLayout>
+
+
