--- a/AutoAlarm/src/main/res/layout/activity_main.xml
+++ b/AutoAlarm/src/main/res/layout/activity_main.xml
@@ -1,17 +1,45 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" >
+<?xml version="1.0" encoding="utf-8"?>
 
-        <TextView
-            android:id="@+id/debug_text"
-            android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Introducing ICS Calendar"
+        android:gravity="center"
+        android:padding="10dip" />
+
+    <TextView
+        android:id="@+id/data"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dip" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
             android:layout_width="wrap_content"
-        />
+            android:layout_height="wrap_content"
+            android:id="@+id/previous"
+            android:text="Prev"
+            android:padding="10dip" />
 
-</FrameLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/next"
+            android:text="Next"
+            android:padding="10dip" />
 
+    </LinearLayout>
 
+</LinearLayout>
